# nix-relay

./: README.md  flake.nix
.github/workflows/: build-test.yaml  ci.yaml
client/: Cargo.toml
client/src/: cli.rs  client.rs  config.rs  macros.rs  main.rs  model.rs  server.rs  websocket.rs
server/: .gitignore  README.md  mix.exs
server/lib/: nix_relay_server.ex
server/lib/nix_relay_server/: application.ex  build_queue.ex  cache.ex  client_websocket_handler.ex  config.ex  router.ex  websocket_handler.ex  worker_websocket_handler.ex
server/test/: application_test.exs  build_queue_test.exs  cache_test.exs  config_test.exs  nix_relay_server_test.exs  router_test.exs  websocket_handler_test.exs
worker/: Cargo.toml
worker/src/: main.rs
