[package]
name = "nixr"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
futures = "0.3.31"
human-panic = "2.0.2"
serde = { version = "1.0.219", features = ["serde_derive"] }
tokio = { version = "1.44.2", features = ["full"] }
tokio-tungstenite = "0.26.2"
toml = "0.8.20"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
