[package]
name = "nixr"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
human-panic = "2.0"
serde = { version = "1.0", features = ["serde_derive"] }
tokio = { version = "1.44", features = ["full"] }
tokio-tungstenite = "0.26"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
anyhow = "1.0"
rayon = "1.10"
serde_json = "1.0"
derivative = "2.2"
regex = "1.11"
